--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,17 @@
 db:
   image: postgres
 
+rabbitmq:
+    image: rabbitmq
+
 b4c:
   build: .
-  command: python manage.py runserver 0.0.0.0:8000
+  command: crossbar start
   volumes:
     - .:/app
   ports:
-    - "8000:8000"
+    - "8080:8080"
   links:
     - db
+    - rabbitmq
+
